doc/2.4/_sources/reference/generated/ak.forms.Form.rst.txt
ak.forms.Form
-------------

.. py:module: ak.forms.Form

Defined in `awkward.forms.form <https://github.com/scikit-hep/awkward-1.0/blob/bc11dd632e68aac9d4b5ace9dfb8c2ae81e1c29a/src/awkward/forms/form.py>`__ on `line 376 <https://github.com/scikit-hep/awkward-1.0/blob/bc11dd632e68aac9d4b5ace9dfb8c2ae81e1c29a/src/awkward/forms/form.py#L376>`__.

.. py:class:: ak.forms.Form(self)



.. _ak-forms-form-_init:

.. py:method:: ak.forms.Form._init(self, *, parameters, form_key)



.. _ak-forms-form-parameters:

.. py:attribute:: ak.forms.Form.parameters



.. _ak-forms-form-is_identity_like:

.. py:attribute:: ak.forms.Form.is_identity_like

Return True if the content or its non-list descendents are an identity



.. _ak-forms-form-parameter:

.. py:method:: ak.forms.Form.parameter(self, key)



.. _ak-forms-form-purelist_parameter:

.. py:method:: ak.forms.Form.purelist_parameter(self, key)



.. _ak-forms-form-purelist_parameters:

.. py:method:: ak.forms.Form.purelist_parameters(self, *keys)



.. _ak-forms-form-purelist_isregular:

.. py:attribute:: ak.forms.Form.purelist_isregular



.. _ak-forms-form-purelist_depth:

.. py:attribute:: ak.forms.Form.purelist_depth



.. _ak-forms-form-minmax_depth:

.. py:attribute:: ak.forms.Form.minmax_depth



.. _ak-forms-form-branch_depth:

.. py:attribute:: ak.forms.Form.branch_depth



.. _ak-forms-form-fields:

.. py:attribute:: ak.forms.Form.fields



.. _ak-forms-form-is_tuple:

.. py:attribute:: ak.forms.Form.is_tuple



.. _ak-forms-form-form_key:

.. py:attribute:: ak.forms.Form.form_key



.. _ak-forms-form-__str__:

.. py:method:: ak.forms.Form.__str__(self)



.. _ak-forms-form-to_dict:

.. py:method:: ak.forms.Form.to_dict(self, verbose=True)



.. _ak-forms-form-_to_dict_extra:

.. py:method:: ak.forms.Form._to_dict_extra(self, out, verbose)



.. _ak-forms-form-to_json:

.. py:method:: ak.forms.Form.to_json(self)



.. _ak-forms-form-_repr_args:

.. py:method:: ak.forms.Form._repr_args(self)



.. _ak-forms-form-type:

.. py:attribute:: ak.forms.Form.type



.. _ak-forms-form-columns:

.. py:method:: ak.forms.Form.columns(self, list_indicator=None, column_prefix=())



.. _ak-forms-form-select_columns:

.. py:method:: ak.forms.Form.select_columns(self, specifier, expand_braces=True, *, prune_unions_and_records=True)



.. _ak-forms-form-column_types:

.. py:method:: ak.forms.Form.column_types(self)



.. _ak-forms-form-_columns:

.. py:method:: ak.forms.Form._columns(self, path, output, list_indicator)



.. _ak-forms-form-_prune_columns:

.. py:method:: ak.forms.Form._prune_columns(self, is_inside_record_or_union)



.. _ak-forms-form-_select_columns:

.. py:method:: ak.forms.Form._select_columns(self, match_specifier)



.. _ak-forms-form-_column_types:

.. py:method:: ak.forms.Form._column_types(self)



.. _ak-forms-form-_to_dict_part:

.. py:method:: ak.forms.Form._to_dict_part(self, verbose, toplevel)



.. _ak-forms-form-length_zero_array:

.. py:method:: ak.forms.Form.length_zero_array(self, *, backend=numpy_backend, highlevel=True, behavior=None)



.. _ak-forms-form-length_one_array:

.. py:method:: ak.forms.Form.length_one_array(self, *, backend=numpy_backend, highlevel=True, behavior=None)



.. _ak-forms-form-_expected_from_buffers:

.. py:method:: ak.forms.Form._expected_from_buffers(self, getkey, recursive)



.. _ak-forms-form-expected_from_buffers:

.. py:method:: ak.forms.Form.expected_from_buffers(self, buffer_key='{form_key}-{attribute}', recursive=True)


    :param buffer_key: Python format string containing
                   ``"{form_key}"`` and/or ``"{attribute}"`` or a function that takes these
                   as keyword arguments and returns a string to use as a key for a buffer
                   in the ``container``.
    :type buffer_key: str or callable
    :param recursive: If True, recurse into subforms; otherwise, yield
                  only the (buffer_key, dtype) pairs for this form object.
    :type recursive: bool

Yield (buffer_key, dtype) pairs describing the expected buffer keys,
and their corresponding dtypes, that a call to :py:obj:`ak.from_buffers` would
be expected to find from the ``container`` object.

